UI update to new version of MenuFramework